# github-activity-visualiser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: release.yml
visualiser/: visualiser.py
